// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Health /> renders Health correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Health
    </DashboardCardTitle>
    <DashboardCardTitleSeeAll
      title="Subsystem health"
    >
      <SubsystemHealth
        LoadingComponent={[Function]}
        cephHealth={
          Object {
            "message": "OCS is healthy",
            "state": "OK_STATE",
          }
        }
        k8sHealth={
          Object {
            "message": "OpenShift is healthy",
            "state": "OK_STATE",
          }
        }
        kubevirtHealth={
          Object {
            "message": "CNV is healthy",
            "state": "OK_STATE",
          }
        }
      />
    </DashboardCardTitleSeeAll>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <HealthBody
      className={null}
    >
      <HealthItem
        LoadingComponent={[Function]}
        details={null}
        message="Cluster is healthy"
        state="OK_STATE"
      />
    </HealthBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Health /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Cluster Health
    </h2>
    <button
      class="btn btn-link"
      type="button"
    >
      See all
    </button>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-health__body"
    >
      <div
        class="kubevirt-health__item"
      >
        <div
          class="kubevirt-health__icon kubevirt-health__icon--ok"
        >
          <span
            aria-hidden="true"
            class="fa fa-check-circle"
          />
        </div>
        <div>
          <span
            class="kubevirt-health__text"
          >
            Cluster is healthy
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Health /> renders error health correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Health
    </DashboardCardTitle>
    <DashboardCardTitleSeeAll
      title="Subsystem health"
    >
      <SubsystemHealth
        LoadingComponent={[Function]}
        cephHealth={
          Object {
            "message": "OCS is healthy",
            "state": "OK_STATE",
          }
        }
        k8sHealth={
          Object {
            "message": "Openshift is in error state",
            "state": "ERROR_STATE",
          }
        }
        kubevirtHealth={
          Object {
            "message": "CNV is in error state",
            "state": "ERROR_STATE",
          }
        }
      />
    </DashboardCardTitleSeeAll>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <HealthBody
      className={null}
    >
      <HealthItem
        LoadingComponent={[Function]}
        details="Cluster health is degraded"
        message="Multiple errors"
        state="ERROR_STATE"
      />
    </HealthBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Health /> renders loading health correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Health
    </DashboardCardTitle>
    <DashboardCardTitleSeeAll
      title="Subsystem health"
    >
      <SubsystemHealth
        LoadingComponent={[Function]}
        cephHealth={
          Object {
            "state": "LOADING_STATE",
          }
        }
        k8sHealth={
          Object {
            "state": "LOADING_STATE",
          }
        }
        kubevirtHealth={
          Object {
            "state": "LOADING_STATE",
          }
        }
      />
    </DashboardCardTitleSeeAll>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <HealthBody
      className={null}
    >
      <HealthItem
        LoadingComponent={[Function]}
        details={null}
        message={null}
        state="LOADING_STATE"
      />
    </HealthBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Health /> renders warning health correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Health
    </DashboardCardTitle>
    <DashboardCardTitleSeeAll
      title="Subsystem health"
    >
      <SubsystemHealth
        LoadingComponent={[Function]}
        cephHealth={
          Object {
            "message": "OCS health is degraded",
            "state": "WARNING_STATE",
          }
        }
        k8sHealth={
          Object {
            "message": "OpenShift is healthy",
            "state": "OK_STATE",
          }
        }
        kubevirtHealth={
          Object {
            "message": "CNV is healthy",
            "state": "OK_STATE",
          }
        }
      />
    </DashboardCardTitleSeeAll>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <HealthBody
      className={null}
    >
      <HealthItem
        LoadingComponent={[Function]}
        details={null}
        message="OCS health is degraded"
        state="WARNING_STATE"
      />
    </HealthBody>
  </DashboardCardBody>
</DashboardCard>
`;
